--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
 			<version>2.3.5</version>
 		</dependency>
 
+		<!--Swagger Start-->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<!--Swagger End-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jersey</artifactId>
