--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.datasource.password=devtool94
 # App Properties
 bezkoder.app.jwtSecret= bezKoderSecretKey
 bezkoder.app.jwtExpirationMs= 86400000
-
+spring.jpa.open-in-view=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
