--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,11 @@ bezkoder.app.jwtExpirationMs= 86400000
 spring.jpa.open-in-view=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
+# Config Email SMTP Server
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=gaindesatdatadiffusionplatform@gmail.com
+spring.mail.password=GalsenProject221
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
