--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
 			<version>2.3.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 		<!-- Adding Spring-starter-email Start-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
