adding endpoints for PartnerShips

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Application properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/ddpDB?createDatabaseIfNotExist=true
@@ -12,7 +12,6 @@ bezkoder.app.jwtSecret= bezKoderSecretKey
 bezkoder.app.jwtExpirationMs= 86400000
 spring.jpa.open-in-view=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-
 # Config Email SMTP Server
 
 spring.mail.host=smtp.gmail.com
