--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # Application properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/ddpDB?createDatabaseIfNotExist=true
-spring.datasource.username=devtool
-spring.datasource.password=devtool94
+spring.datasource.username=postgres
+spring.datasource.password=kallah
 # App Properties
 bezkoder.app.jwtSecret= bezKoderSecretKey
 bezkoder.app.jwtExpirationMs= 86400000
