dev parameters endpointq

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
-# Application properties
+#Application properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.jpa.defer-datasource-initialization=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/ddpDB?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/css_ddp_db?createDatabaseIfNotExist=true
+#spring.datasource.username=css_admin
 spring.datasource.username=postgres
+#spring.datasource.password=HX0KwDAOJ3AJK
 spring.datasource.password=kallah
-# App Properties
+
+#App Properties
 bezkoder.app.jwtSecret= bezKoderSecretKey
 bezkoder.app.jwtExpirationMs= 86400000
 spring.jpa.open-in-view=true
